UI fixes (#40)
* PNG now serves over rails

* Fixed UI

* Removed inline-svg

* Fixed the image issues when browsing through safari

* Fixed layout problems on iOS

* Final fixes for UI. Link color changed to 0099cb

* Finished the card design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,22 @@
     flex-wrap: none !important;
  }
 
+.place-Image{
+    width: 51%;
+}
+h3, .h3 {
+    font-size: 18px;
+}
+h4, .h4 {
+    margin-top: 3px;
+    font-size: 14.5px;
+}
+.frontpage-image {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
+
 .list {
     margin-left: 3%;
     margin-top: 3%;
@@ -83,6 +99,7 @@
 }
 
 .link-css {
+    color: #0099cb;
     font-size: 15px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -100,6 +117,24 @@
 .space-nav-bar {
     margin-left:20px;
     width: 39%;
+    margin-right: -7.7rem !important;
+}
+.center-nav-bar {
+    margin-right: -7.7rem !important;
+}
+.nav-bar-img {
+    width: 50%;
+}
+
+.description {
+    padding-right: 4px;
+    font-size: 14px;
+    color: #545454;
+}
+
+.disabledLinks {
+    pointer-events: none;
+    cursor: default;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -114,16 +149,34 @@
         width: 40%;
     }
 }
-.disabledLinks {
-    pointer-events: none;
-    cursor: default;
- }
 
 @media only screen and (max-width: 768px) {
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+
     .center-nav-bar {
+        margin-right:0px;
         margin: auto;
         width: 100%;
         padding: 10px;
+    }
+    .place-Image {
+        width: 77%;
+    }
+    .searchbar .icon { 
+        position: absolute;
+        top: 21%;
+        right: -10px;
+        font-size: 29px;
+        cursor: pointer;
+        color: #999999;
+        border-color: white;
+        background: transparent;
+        border-style: solid;
     }
     .card {
         margin-top: 10px;
@@ -132,12 +185,24 @@
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.02), 0 3px 6px rgba(0, 0, 0, 0.23);
         padding: 5px 0px 5px 8px;
     }
+    .center-nav-bar {
+        margin-right: 0px !important;
+    }
     .center-div{
       margin: 0 auto;
       width: 100%;
     }
     .space-nav-bar {
         margin-left:0px;
+        width: 100%;
+    }
+
+    h3, .h3 {
+        font-size: 20px;
+    }
+    h4, .h4 {
+        margin-top: 3px;
+        font-size: 16.5px;
     }
     
 }
